# anki-deck-gen

./: .gitignore  Cargo.toml  README.md
data/: canto_deck.json  deck.json
src/: main.rs
