[package]
name = "anki-deck-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
genanki-rs = "0.3"
rand = "0.8.5"
clap = { version = "4.0.27", features = ["derive"] }
